Fix content being too wide for viewport
The bug was caused by margins on the Flexboxgrid rows. Removing those margins fixes it, and removes the need for hiding overflow on the `body` and `html` elements.

- remove Normalize
- add global styles and include in every page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,18 +2,6 @@
 @import 'nav.scss';
 @import 'footer.scss';
 
-* {
-    box-sizing: border-box;
-}
-html, body {
-    overflow-x: hidden;
-}
-body {
-    font-family: 'Assistant', sans-serif;
-}
-h1, h2 {
-    letter-spacing: 1px; /* Override Skeleton */
-}
 p {
     font-size: 2rem;
     text-align: center;
